# olympic_paris

./: .gitignore  Docker-compose.dev.yml  Docker-compose.yml  Dockerfile  README.md  alembic.ini  data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1cfc2b1d5469_venues_table.py  1df2254d30c8_disciplines_table.py  8b2c971cbaa4_events_table.py  9194c91dcc26_users_table.py  d819fdf10eef_competitor_table.py  db40e2824617_venues_table.py  e58093454694_countries_table.py
app/: main.py  routers.py
app/api/: __init__.py  auth_endpoints.py  competitors_endpoint.py  draft_endpoints.py  events_endpoint.py  venues_endpoint.py
app/api/Depends/: authorization.py
app/core/: __init__.py  database.py  email_settings.py  redis.py  settings.py
app/crud/: __init__.py  base_crud.py  competitors_crud.py  draft_crud.py  events_crud.py  users_crud.py  venues_crud.py
app/models/: __init__.py  competitor_model.py  countries_model.py  disciplines_model.py  draft_model.py  events_model.py  user_model.py  venues_model.py
app/schemas/: __init__.py  auth_schema.py  competitors_schema.py  disciplines_schema.py  draft_schema.py  events_schema.py  users_schema.py  venues_schema.py
app/services/: __init__.py  auth_service.py  competitors_service.py  disciplines_service.py  draft_service.py  events_service.py  users_service.py  venues_service.py
app/utils/: __init__.py  draft.py  random_code.py  rate_limit.py  role.py  security.py  send_verification_email.py  validate_and_update_cache.py
email_templates/: email.html  reset_password.html
