[tool.poetry]
name = "olympic-paris"
version = "0.1.0"
description = ""
authors = ["wijez <viet.info.43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.1"
requests = "^2.32.3"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
httpx = "^0.27.0"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
